<?xml version="1.0"?>
<package format="2">
  <name>prediction_rmse_calculator</name>
  <version>0.0.0</version>
  <description>The prediction_rmse_calculator package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
