<?xml version="1.0"?>
<package format="2">
  <name>speed_and_ped_state_calculator</name>
  <version>0.0.0</version>
  <description>The speed_and_ped_state_calculator package</description>
  <maintainer email="amsl@todo.todo">Iwamura Yuuka</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pedsim_msgs</depend>

</package>
